# hdhr-mpv

./: .gitmodules  README.md  index.html  package-lock.json  package.json  render-icons.mjs
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
hdhomerun-sys/: Cargo.toml  build.rs  wrapper.h
hdhomerun-sys/examples/: discover.rs
src/: App.tsx  api.ts  index.css  lib.ts  settings.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: control.rs  hdhomerun.rs  lib.rs  libhh.rs  main.rs  mpv.rs
src/components/: Connect.tsx  GuideGrid.tsx  NowView.tsx  ScanModal.tsx  Settings.tsx  Shell.tsx  Signal.tsx
