[package]
name = "hdhr-mpv"
version = "0.1.0"
description = "HDHR MPV — over-the-air live TV for HDHomeRun, played through mpv"
authors = ["you"]
edition = "2021"

[lib]
name = "hdhr_mpv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
crc32fast = "1"
